--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
                                 <ul id="navigation">                                                                                          
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About</a></li>
-                                    <li class="active"><a href="services.html">Services</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li class="active"><a href="contact.html">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>
