--- a/services.html
+++ b/services.html
@@ -205,7 +205,7 @@
                         <div class="col-xl-8 col-lg-9 col-md-7">
                             <div class="wantToWork-caption wantToWork-caption2">
                                 <h2>Call us for a service</h2>
-                                <p>We deliver the goods to the most complicated places on earth</p>
+                                <p>We believe in clear communication and excellent customer service, so when you call Laundrius, you can expect prompt support, professional advice, and reliable service from start to finish.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-5">
