--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s">Quality laundry service in Botha Bothe</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s">We take care about cleaniness of your clothes</p>
-                                    <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Explore Services</a>
+                                    <a href="services.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Explore Services</a>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                             <p class="mb-20">
                                 The company was established in 2023, to meet and bring convinience to customers with no time or have a hussle doing laundry!
                             </p>
-                            <p class="mb-30">We have then been comitted to providing excellent laundry services!</p>
+                            <p class="mb-30">We have then been commited to providing excellent laundry services!</p>
 
                             <a href="about.html" class="btn">About Us</a>
                         </div>
